<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_marginBottom="15dp"
              android:layout_weight="1"
              android:layout_height="wrap_content">

    <TextView android:text="@string/item_calorie"
              style="@style/Item.Title"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:gravity="bottom"
        android:layout_height="wrap_content">

        <TextView android:text="@string/no_dot_records"
                  style="@style/Item.Content"
                  android:id="@+id/item_calorie"
            />

        <TextView android:text="@string/kcal"
                  style="@style/Item.TitleSecond"
            />
    </LinearLayout>
</LinearLayout>

