<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:paddingBottom="10dp"

    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/a7" />

        <TextView
            style="@style/Item.Title"
            android:paddingLeft="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/item_calorie" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_calorie"
            style="@style/Item.Content"
            android:text="@string/no_dot_records" />

        <TextView
            style="@style/Item.TitleSecond"
            android:text="@string/kcal" />
    </LinearLayout>
</LinearLayout>

