<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/snowhite"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/a9" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/meta_total_time"
                    style="@style/Item.Content.Small"
                    android:text="@string/not_available" />

                <TextView
                    style="@style/Item.TitleSecond.Gray"
                    android:text="@string/item_total_time" />


            </LinearLayout>
        </LinearLayout>

        <ImageView style="@style/Cell.Vertical"
            android:layout_marginLeft="25dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/a9" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/meta_start_time"
                    style="@style/Item.Content.Small"
                    android:text="@string/not_available" />

                <TextView
                    style="@style/Item.TitleSecond.Gray"
                    android:text="@string/item_start_time"

                    />
            </LinearLayout>

        </LinearLayout>

        <!--<ImageView style="@style/Cell.Vertical.Time" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/meta_end_time"
                style="@style/Item.Content.Small"
                android:text="@string/not_available" />

            <TextView
                style="@style/Item.TitleSecond.Gray"
                android:text="@string/item_end_time" />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_border_horizontal"

        />
</LinearLayout>
