<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:background="@drawable/bg"
    >

    <include layout="@layout/action_bar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        >

        <FrameLayout
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:id="@+id/status_layout"
            android:layout_width="fill_parent"
            android:padding="5dp"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/status_layout"
            android:background="@drawable/beijing"
            >
            <LinearLayout
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="60dp"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/distance"
                    android:textColor="#ffffff"
                    android:textSize="60dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00.00"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="#ffffff"
                    android:text="跑步总里程（公里）"
                    />
                <Button
                    android:visibility="gone"
                    style="@style/BigStartButton"
                    android:text="@string/btn_start"
                    android:layout_marginTop="25dp"
                    />

                <Button
                    android:visibility="gone"
                    android:id="@+id/btn_disabled"
                    style="@style/BigGrayButton"
                    android:text="@string/btn_disabled"
                    android:layout_marginTop="25dp"
                    />

                <Button
                    android:visibility="gone"
                    style="@style/BigEndButton"
                    android:text="@string/btn_end"
                    android:layout_marginTop="25dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:background="@drawable/time_background_border_bottom"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="43dp"
            android:layout_marginLeft="60dp"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/seconds"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/peisu"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#ffffff"
                android:text="00'00"
                android:layout_gravity="center_horizontal"
                android:layout_alignBottom="@id/seconds"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="43dp"
            android:layout_marginRight="60dp"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/shijian"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/item_cost_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00'00"
                android:textSize="20dp"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
        <View
            android:layout_width="2dp"
            android:layout_height="85dp"
            android:background="#ffffff"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="43dp"
            >

        </View>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/zanting"
            />
        <Button
            android:id="@+id/btn_end"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/zanting"
            />
    </RelativeLayout>
</LinearLayout>
